[tool.poetry]
name = "cachey"
version = "0.1.0"
description = "Simple and easy to use tool for caching while using FastAPI framework."
authors = ["ilya-4real <ilya.chernishyov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.7"
orjson = "^3.10.6"


[tool.poetry.group.test.dependencies]
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
